--- a/remote_template.html
+++ b/remote_template.html
@@ -315,8 +315,8 @@
         </h1>
         <p class="passport-subtitle">Credential ID: {{id}}</p>
         <div class="header-meta">
-          {{#if credentialSubject.registeredId}}
-          <div class="meta-pill"><div class="dot" style="background:#009EDB"></div><span class="label">ID</span>{{credentialSubject.registeredId}}</div>
+          {{#if credentialSubject.id}}
+          <div class="meta-pill"><div class="dot" style="background:#009EDB"></div><span class="label">ID</span>{{credentialSubject.id}}</div>
           {{/if}}
           {{#if credentialSubject.serialNumber}}
           <div class="meta-pill"><div class="dot" style="background:#00C4B3"></div><span class="label">S/N</span>{{credentialSubject.serialNumber}}</div>
