--- a/remote_template.html
+++ b/remote_template.html
@@ -90,6 +90,8 @@
       border: 1px solid rgba(255,255,255,0.1);
       padding: 6px 14px; border-radius: 20px;
       font-size: 0.78rem; color: rgba(255,255,255,0.7);
+      max-width: 280px;
+      text-overflow: ellipsis;
     }
     .meta-pill .dot   { width: 5px; height: 5px; border-radius: 50%; flex-shrink: 0; }
     .meta-pill .label { color: rgba(255,255,255,0.4); margin-right: 2px; }
