--- a/remote_template.html
+++ b/remote_template.html
@@ -91,6 +91,8 @@
       padding: 6px 14px; border-radius: 20px;
       font-size: 0.78rem; color: rgba(255,255,255,0.7);
       max-width: 280px;
+      white-space: nowrap;
+      overflow: hidden;
       text-overflow: ellipsis;
     }
     .meta-pill .dot   { width: 5px; height: 5px; border-radius: 50%; flex-shrink: 0; }
