--- a/remote_template.html
+++ b/remote_template.html
@@ -91,10 +91,13 @@
       padding: 6px 14px; border-radius: 20px;
       font-size: 0.78rem; color: rgba(255,255,255,0.7);
       max-width: 280px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
     }
+    .meta-pill .value {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 0;
+      }
     .meta-pill .dot   { width: 5px; height: 5px; border-radius: 50%; flex-shrink: 0; }
     .meta-pill .label { color: rgba(255,255,255,0.4); margin-right: 2px; }
     .header-right { text-align: right; padding-top: 8px; }
@@ -320,7 +323,7 @@
         <p class="passport-subtitle">Credential ID: {{id}}</p>
         <div class="header-meta">
           {{#if credentialSubject.id}}
-          <div class="meta-pill"><div class="dot" style="background:#009EDB"></div><span class="label">ID</span>{{credentialSubject.id}}</div>
+          <div class="meta-pill"><div class="dot" style="background:#009EDB"></div><span class="label">ID</span><span class="value">{{credentialSubject.id}}</span></div>
           {{/if}}
           {{#if credentialSubject.serialNumber}}
           <div class="meta-pill"><div class="dot" style="background:#00C4B3"></div><span class="label">S/N</span>{{credentialSubject.serialNumber}}</div>
