--- a/remote_template_2.html
+++ b/remote_template_2.html
@@ -334,7 +334,7 @@
     <div class="claim-meta">
       <div class="claim-info">
         <div class="topic-label">{{conformityTopic}}</div>
-        <div class="standard-name">{{referenceStandard.name}}</div>
+        <div class="standard-name"><a href="{{id}}>{{referenceStandard.name}}</a></div>
       </div>
       <div class="status-container">
         {{#if conformance}}
