--- a/remote_template_2.html
+++ b/remote_template_2.html
@@ -1,5 +1,6 @@
 <style>
   :root { --font-main: 'Inter', -apple-system, sans-serif; --font-mono: 'JetBrains Mono', 'Fira Code', monospace; --radius: 12px; --shadow: 0 4px 20px rgba(0, 0, 0, 0.08); --dpp-primary: #10b981; --dcc-primary: #3b82f6; --dia-primary: #64748b; }
+  #dpp-root { width: 100%; display: flex; justify-content: center; }
   .verified-badge, .safe-badge, .score-high { background: var(--dpp-primary); }
   .revoked-badge, .hazardous-badge, .score-low { background: #ef4444; }
   .unknown-badge, .score-mid { background: #f59e0b; }
