--- a/remote_template_2.html
+++ b/remote_template_2.html
@@ -11,7 +11,7 @@
   .credential-body { padding: 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; min-width: 0; }
   .data-row { display: flex; align-items: baseline; margin-bottom: 18px; font-size: 1.12rem; width: 100%; }
   .label { flex: 0 0 30%; color: #6b7280; font-size: 0.95rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; line-height: 1.5; }
-  .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; overflow-wrap: break-word; }
+  .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; overflow-wrap: break-word; min-width: 0; }
   .item-dpp { border-top: 4px solid var(--dpp-primary); }
   .item-dpp .credential-header { background: linear-gradient(to top, #ffffff, #dfebe1); }
   .badge { color: #ffffff; font-weight: 900; padding: 2px 8px; border-radius: 99px; font-size: 0.875rem; }
