--- a/remote_template_2.html
+++ b/remote_template_2.html
@@ -331,7 +331,7 @@
             <div class="claim-info">
               <div class="topic-label">${esc(claim.conformityTopic)}</div>
               <div class="standard-name">
-                <a href="${esc(claim.id)}">${esc(claim.referenceStandard && claim.referenceStandard.name)}</a>
+                <a href="${esc(claim.id)}" target="_blank">${esc(claim.referenceStandard && claim.referenceStandard.name)}</a>
               </div>
             </div>
             <div class="status-container">${conformanceBadge}</div>
