--- a/remote_template.html
+++ b/remote_template.html
@@ -1,20 +1,20 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Barlow+Condensed:wght@300;400;600;700;800&display=swap');
 
-  :root {
-    --bg:        #0d0f12;
-    --surface:   #151820;
-    --surface2:  #1c2030;
-    --border:    #2a2f3d;
+:root {
+    --bg:        #2b2d30;
+    --surface:   #333538;
+    --surface2:  #3a3c40;
+    --border:    #4a4d52;
     --accent:    #00e5a0;
     --danger:    #ff3d5a;
     --warn:      #ffb800;
-    --muted:     #4a5268;
+    --muted:     #7a7e88;
     --text:      #e2e8f0;
-    --text-dim:  #8892a4;
+    --text-dim:  #a0a6b4;
     --mono:      'Space Mono', monospace;
     --sans:      'Barlow Condensed', sans-serif;
-  }
+}
 
   * { box-sizing: border-box; margin: 0; padding: 0; }
 
@@ -29,7 +29,7 @@
   #dpp-root {
     max-width: 860px;
     margin: 0 auto;
-    padding: 24px 16px;
+    padding: 40px 16px;
   }
 
   /* ── Header ── */
