--- a/remote_template.html
+++ b/remote_template.html
@@ -2,16 +2,16 @@
   @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Barlow+Condensed:wght@300;400;600;700;800&display=swap');
 
 :root {
-    --bg:        #2b2d30;
-    --surface:   #333538;
-    --surface2:  #3a3c40;
-    --border:    #4a4d52;
-    --accent:    #00e5a0;
+    --bg:        #3f4146;
+    --surface:   #484b51;
+    --surface2:  #52555c;
+    --border:    #6b6f78;
+    --accent:    #00c98a;
     --danger:    #ff3d5a;
     --warn:      #ffb800;
-    --muted:     #7a7e88;
-    --text:      #e2e8f0;
-    --text-dim:  #a0a6b4;
+    --muted:     #c0c4cc;
+    --text:      #f0f2f5;
+    --text-dim:  #d0d4dc;
     --mono:      'Space Mono', monospace;
     --sans:      'Barlow Condensed', sans-serif;
 }
